changed css loading order, and avoid too big user picture in menu bar,  limit it to 100px height

--- a/extras/themes/blue/css/styles.css
+++ b/extras/themes/blue/css/styles.css
@@ -2283,3 +2283,9 @@ div#show_all_menu .tab_bg_1 a:hover {
 	margin: 57px 0 auto 860px;
 	z-index: 2;		 		 	 		
 }
+
+/* ------------------------------------ adjustments ----------------------------*/
+
+.nav>li>a>img{
+  max-height:100px;
+}
